Issue #100: Create and update Unit tests for VendAppController Class
- Updated and created more Unit tests for the VendappController class
- Added an the surefire plugin with an Argline to be able to run the
  Unit tests
 - Updated the module-info file to be able to run tests

 Will go over the tests with the team to make sure i have covered the
 most important functionallity.