@@ -89,6 +89,22 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
 
+            <!-- SureFire plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        ${argLine} --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED  <!-- for JavaFX Testing -->
+                    </argLine>
+                    <reportsDirectory>
+                        ${testResultsDir}/junit/${project.artifactId}
+                    </reportsDirectory>
+                </configuration>
+
+            </plugin>
+
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
